infra/argocd/ingress/argo-rollouts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-rollouts-ingress
  namespace: argo-rollouts
  annotations:
    kubernetes.io/ingress.class: "gce"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"  # Optional: If using cert-manager
spec:
  rules:
    - host: rollouts.yanirw.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-rollouts-dashboard
                port:
                  number: 80
  tls:
    - hosts:
        - rollouts.yanirw.com
      secretName: cloudflare-tls
